--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,31 @@
-
 .container {
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card {
-border: 1px solid #ccc;
-border-radius: 8px;
-margin: 10px;
-padding: 20px;
-width: 12rem;
+    /*  background-color: rgb(86, 193, 255); */
+    background-color: rgb(255, 209, 45);
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin: 10px;
+    padding: 15px 40px;
+    width: 12.5rem;
+}
+
+.card p {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.card h2 {
+    font-family: sans-serif;
+    text-align: center;
+}
+
+.card img {
+    border: 4px solid white;
+    border-radius: 5px;
+    background-image: url('./assets/cloud-background.jpg');
+
 }
