--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,53 @@
+
+body {
+    background-image: url('assets/pngtree-a-vibrant-stylized-cityscape-at-dawn-with-pastel-colors-and-geometric-picture-image_16312399.jpg');
+    background-size: contain;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.tittle {
+    margin: 4.5rem 1rem 0.1em 1em;
+    font-size: 2em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+}
+
+.searchContainer {
+    margin: 2em 5em;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    background-color: #ffd12d;
+    padding: 9px 10px;
+    border-radius: 10px;
+    width: 20em;
+     
+}
+
+.searchContainer label {
+    padding: 0 0 0 10px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.search {
+    padding: 6px 25px;
+    border-radius: 5px;
+    width: 100%;
+}
+
+.search:focus {
+    outline: none;
+    border: 2px solid rgb(54, 104, 255);
+    border-radius: 5px;
+}
+
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -6,7 +56,7 @@
 
 .card {
     /*  background-color: rgb(86, 193, 255); */
-    background-color: rgb(255, 209, 45);
+    background-color: #ffd12d;
     border: 1px solid #ccc;
     border-radius: 8px;
     margin: 10px;
@@ -21,6 +71,8 @@
 .card h2 {
     font-family: sans-serif;
     text-align: center;
+    font-size: 21px;
+
 }
 
 .card img {
@@ -28,4 +80,12 @@
     border-radius: 5px;
     background-image: url('./assets/cloud-background.jpg');
 
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    margin: 20px;
 }
