--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 
 body {
-    background-image: url('assets/pngtree-a-vibrant-stylized-cityscape-at-dawn-with-pastel-colors-and-geometric-picture-image_16312399.jpg');
-    background-size: contain;
+    background-color: rgb(94, 141, 251);
+    /* background-image: url('assets/pngtree-a-vibrant-stylized-cityscape-at-dawn-with-pastel-colors-and-geometric-picture-image_16312399.jpg'); */
+    
 }
 
 main {
@@ -12,14 +13,19 @@ main {
 }
 
 .tittle {
-    margin: 4.5rem 1rem 0.1em 1em;
+    margin: 4em 0.5em 0;
     font-size: 2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
 }
 
+.logo {
+    width: 200px;
+    height: auto;
+}
+
 .searchContainer {
-    margin: 2em 5em;
+    margin: 2em 5em 5em;
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -27,6 +33,7 @@ main {
     padding: 9px 10px;
     border-radius: 10px;
     width: 20em;
+    box-shadow:  5px  4px 2px  rgb(38, 71, 162)
      
 }
 
@@ -34,6 +41,7 @@ main {
     padding: 0 0 0 10px;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 
 .search {
@@ -52,6 +60,7 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 1.5em 1.5em;
 }
 
 .card {
@@ -62,6 +71,7 @@ main {
     margin: 10px;
     padding: 15px 40px;
     width: 12.5rem;
+    box-shadow:  5px  4px 2px  rgb(38, 71, 162)
 }
 
 .card p {
@@ -88,4 +98,24 @@ main {
     align-items: center;
     gap: 15px;
     margin: 20px;
+}
+
+.pageNumber {
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    background-color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    box-shadow:  5px  4px 2px  rgb(38, 71, 162)
+}
+
+button {
+    background-color: #ffd12d;
+    border: none;
+    border-radius: 5px;
+    padding: 1px 5px;
+    font-size: 20px;
+    cursor: pointer;
+    box-shadow:  5px  4px 2px  rgb(38, 71, 162)
 }
